// Vitest Snapshot v1

exports[`onBuildDone > Disallow is empty 1`] = `
"User-agent: test3
Disallow:
Sitemap: https://example.com/sitemap-index.xml
"
`;

exports[`onBuildDone > allow is array, and disallow is array, should return arrays 1`] = `
"User-agent: test2
Disallow: /1
Disallow: /2
Allow: /3
Allow: /4
Sitemap: https://example.com/sitemap-index.xml
"
`;

exports[`onBuildDone > cleanParam is empty 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap-index.xml
"
`;

exports[`onBuildDone > cleanParam: "s" 1`] = `
"User-agent: test4
Disallow: /
Clean-param: s
Sitemap: https://example.com/sitemap-index.xml
"
`;

exports[`onBuildDone > crawlDelay: 34, should return \`Crawl-delay: 34\` 1`] = `
"User-agent: test
Allow: /
Crawl-delay: 34
Sitemap: https://example.com/sitemap-index.xml
"
`;

exports[`onBuildDone > host = "", should return robots.txt without \`Host:\` 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap-index.xml
"
`;

exports[`onBuildDone > host is valid, should return robots.txt with \`Host: abc.com\` 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap-index.xml
Host: abc.com
"
`;

exports[`onBuildDone > host is valid, should return robots.txt with \`Host: abc\` 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap-index.xml
Host: abc
"
`;

exports[`onBuildDone > options = {}, should return default robots.txt 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap-index.xml
"
`;

exports[`onBuildDone > options = undefined, should return default robots.txt 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap-index.xml
"
`;

exports[`onBuildDone > policy is undefined, should return default robots.txt 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap-index.xml
"
`;

exports[`onBuildDone > sitemap = [], should return robots.txt without \`Sitemap:\` 1`] = `
"User-agent: *
Allow: /
"
`;

exports[`onBuildDone > sitemap = false, should return robots.txt without \`Sitemap:\` 1`] = `
"User-agent: *
Allow: /
"
`;

exports[`onBuildDone > sitemap = true, should return default robots.txt 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap-index.xml
"
`;

exports[`onBuildDone > sitemap is valid URL string, should return \`Sitemap: https://test\` 1`] = `
"User-agent: *
Allow: /
Sitemap: https://test
"
`;

exports[`onBuildDone > sitemap is valid array of URL string, should return array of Sitemap 1`] = `
"User-agent: *
Allow: /
Sitemap: https://test1
Sitemap: https://test2
"
`;

exports[`onBuildDone > sitemapBaseFileName = \`abc\`, should return robots.txt with sitemap=abc.xml 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/abc.xml
"
`;

exports[`onBuildDone > transform  = async func, should return robots.txt with \`# extra text\` 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap-index.xml
# extra text
"
`;

exports[`onBuildDone > transform  = sync func, should return robots.txt with \`# extra text\` 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap-index.xml
# extra text
"
`;
